# RallyRobotPilot

./: .gitignore  GA.md  MPI.md  README.md  human_seed.json  launch_ga.slurm  launch_mpi.sh  launch_replay_telemetry.slurm  launch_segmented.sh  main.py  manage_workers.sh  pyproject.toml  requirements.txt  seg_job_3922.err  seg_job_3925.err  seg_job_3926.err  seg_job_3927.err  seg_job_3929.err  test.py
GA/: GA.md
GA/analysis/: analyze_and_replay.py  analyze_failed_runs.py  compare_ga_runs.py  generate_plots.py
GA/assets/: SimpleTrack_checkpoints.json
GA/scripts/: run_ga_segmented.py
GA/seed/: human_seed.json
GA_results/: best_genome_2025-11-18_12-31-44.json
assets/SimpleTrackCP/: SimpleTrack.blend  SimpleTrack.blend1
assets/VisualTrack/: Intersection.blend  Intersection.blend1  Intersection.traj  IntersectionObstacles.mtl  IntersectionRoad.mtl  Intersection_traj1.traj  TrajectoryExporter.py  test_road.py  track_circuit2_metadata.json  track_circuit3_metadata.json  track_metadata.json
notebooks/: analysis.ipynb
rallyrobopilot/: __init__.py  autopilot_engine.py  car.py  game_launcher.py  input_manager.py  remote_commands.py  remote_controller.py  sensing_message.py  track.py
rallyrobotpilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: autopilot.py  data_collector.py  data_reader.py  get_distrib.py  main.py  preprocess.py  record_run.py  run_ga.py  run_ga_mpi.py  run_hello_world.py  test.py  visual_replay.py
scripts/model/: infer.py  model.py  preprocess.py  train.py
