[project]
name = "rallyrobotpilot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "matplotlib>=3.10.7",
    "opencv-python>=4.7.0.72",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "ursina==5.0.0",
    "ursinanetworking==2.1.4",

    # Torch GPU + Torchvision GPU
    "torch==2.2.2+cu121",
    "torchvision==0.17.2",
]

[tool.setuptools]
packages = ["rallyrobopilot"]

[tool.setuptools.package-data]
rallyrobopilot = ["assets/**/*"]

[tool.uv]
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'"
]

# >>> KEY FIX <<<
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
